--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -4,4 +4,7 @@
   align-items: center;
   margin: 0 42px 24px 40px;
   font-size: 16px;
+  font-family: "Cabinet Grotesk", sans-serif;
+  font-weight: 500;
+  color: rgba(0, 0, 0, 1);
 }
