--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -2,7 +2,7 @@
   display: flex;
   align-items: center;
   padding: 32px 0 28px;
-  font-family: Cabinet Grotesk, sans-serif;
+  font-family: "Cabinet Grotesk", sans-serif;
   font-weight: 700;
   font-size: 20px;
   line-height: 24px;
@@ -21,6 +21,7 @@
   margin: 0 20px 0 auto;
   border: none;
   opacity: 1;
+  font-weight: 500;
 }
 
 .header__user-container {
