--- a/src/components/ModalWithForm/ModalWithForm.css
+++ b/src/components/ModalWithForm/ModalWithForm.css
@@ -4,11 +4,15 @@
   left: 0;
   right: 0;
   bottom: 0;
-  background-color: #0000004d;
   display: flex;
   align-items: center;
   justify-content: center;
   visibility: hidden;
+  background-color: rgba(0, 0, 0, 0.5);
+  font-family: "Cabinet Grotesk", sans-serif;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 20px;
 }
 
 .modal_opened {
@@ -17,12 +21,32 @@
 
 .modal__title {
   margin: 0;
+  padding-bottom: 24px;
+  padding-top: 28px;
+  font-size: 16px;
 }
 
 .modal__close {
   position: absolute;
   top: 20px;
   right: 28px;
+  background: none;
+  border: none;
+  font-size: 20px;
+  cursor: pointer;
+}
+
+.modal__submit {
+  width: 124px;
+  height: 36px;
+  border-radius: 4px;
+  border: none;
+  color: rgba(255, 255, 255, 1);
+  background-color: rgba(0, 0, 0, 0.3);
+}
+
+.modal__submit:hover {
+  background-color: rgba(0, 0, 0, 0.5);
 }
 
 .modal__content {
@@ -32,11 +56,9 @@
   max-width: 496px;
   box-sizing: border-box;
   width: 100%;
-  margin: 193px 472px;
   border-radius: 20px;
-  width: 496px;
   height: 436px;
-  border: 1px;
+  border: 1px solid #ccc;
 }
 
 .modal__form {
@@ -47,6 +69,11 @@
 
 .modal__input {
   display: block;
+  margin-top: 8px;
+  margin-bottom: 20px;
+  border: none;
+  border-bottom: 1px solid rgba(0, 0, 0, 1);
+  width: 100%;
 }
 
 .modal__radio-buttons {
@@ -54,4 +81,12 @@
   padding: 0;
   display: flex;
   flex-direction: column;
+  gap: 8px;
+  padding-top: 12px;
+  padding-bottom: 32px;
+  color: rgba(0, 0, 0, 0.5);
+}
+
+.modal__legend {
+  color: rgba(0, 0, 0, 1);
 }
