--- a/src/components/ToggleSwitch/ToggleSwitch.css
+++ b/src/components/ToggleSwitch/ToggleSwitch.css
@@ -1,7 +1,7 @@
 .toggle-switch {
   width: 56px;
   height: 28px;
-  border: 2px solid black;
+  border: 2px solid rgba(0, 0, 0, 0.5);
   border-radius: 20px;
   cursor: pointer;
   overflow: hidden;
