--- a/src/components/ToggleSwitch/ToggleSwitch.css
+++ b/src/components/ToggleSwitch/ToggleSwitch.css
@@ -9,7 +9,15 @@
 }
 
 .toggle-switch__checkbox {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  margin: 0;
   opacity: 0;
+  cursor: pointer;
+  z-index: 2;
 }
 
 .toggle-switch__circle {
@@ -20,12 +28,16 @@
   border-radius: 50%;
   left: 0;
   transition: all 0.3s;
+  z-index: 1;
 }
 
 .toggle-switch__text {
   color: gray;
   position: absolute;
   top: 5px;
+  font-weight: bold;
+  font-size: 14px;
+  z-index: 0;
 }
 
 .toggle-switch__text_F {
