--- a/src/components/ItemCard/ItemCard.css
+++ b/src/components/ItemCard/ItemCard.css
@@ -93,3 +93,21 @@
   cursor: pointer;
   color: rgba(0, 0, 0, 0.6);
 }
+.card__like-button {
+  background: url("../../assets/heart-default.svg") center no-repeat;
+  background-size: contain;
+  width: 20px;
+  height: 20px;
+  border: none;
+  cursor: pointer;
+  transition: opacity 0.2s ease;
+}
+
+.card__like-button:hover {
+  opacity: 0.7;
+}
+
+.card__like-button_liked {
+  background: url("../../assets/heart-filled.svg") center no-repeat;
+  background-size: contain;
+}
