--- a/src/components/ItemCard/ItemCard.css
+++ b/src/components/ItemCard/ItemCard.css
@@ -94,7 +94,10 @@
   color: rgba(0, 0, 0, 0.6);
 }
 .card__like-button {
-  background: url("../../assets/heart-default.svg") center no-repeat;
+  position: absolute;
+  top: 10px;
+  right: 20px;
+  background: url("../../assets/likebttn.svg") center no-repeat;
   background-size: contain;
   width: 20px;
   height: 20px;
