--- a/src/components/ModalWithForm/ModalWithForm.css
+++ b/src/components/ModalWithForm/ModalWithForm.css
@@ -66,7 +66,7 @@
   flex-direction: column;
   gap: 16px;
   width: 496px;
-  height: 304;
+  height: 304px;
   position: relative;
   top: 259px;
   left: 472px;
