--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -2,9 +2,12 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin: 0 42px 24px 40px;
+
+  margin: 24px 42px 24px 40px;
   font-size: 16px;
   font-family: "Cabinet Grotesk", sans-serif;
   font-weight: 500;
   color: rgba(0, 0, 0, 1);
+
+  margin-top: auto;
 }
