--- a/src/components/Main/Main.css
+++ b/src/components/Main/Main.css
@@ -1,6 +1,7 @@
 .card__list {
   display: flex;
   flex-wrap: wrap;
+  justify-content: flex-start;
   margin: 0;
   padding: 0;
   list-style-type: none;
